--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,48 @@
     transform: rotate(360deg);
   }
 }
+.footer{
+  width: 100%;
+  height: 580px;
+  background-color: black;
+}
+.footer ul{
+  width: 50px;
+ padding-top: 40px;
+}
+li{
+  padding: 15px;
+ list-style-type: none;
+  font-size: 17px;
+  
+}
+.footer li a{
+  text-decoration: none;
+  color: blanchedalmond;
+}
+hr{
+  width: 900px;
+}
+.insta-icon , .twitter-icon , .wp-icon, .facebook-icon{
+  color: #FCFEFD;
+  margin: 20px;
+  width: 70px;
+}
+.footer1{
+  display: flex;
+  justify-content: space-around;
+}
+.footer1 span{
+  margin:70px 25px;
+}
+.phoneNUm{
+  font-family: 'Roboto', sans-serif;
+  padding: 0px;
+  color: #FCFEFD;
+  margin: 70px;
+}
+.gmail{
+  font-family: 'Roboto', sans-serif;
+  color: #FCFEFD;
+  margin:  1px 10px;
+}
